--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,8 @@
   <link rel="icon" href="/favicon.ico" />
 
   <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat&display=swap" rel="stylesheet">
-    
-  <title>React.js Boilerplate</title>
+
+  <title>Podcast Client</title>
 </head>
 
 <body>
