--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 
   <link rel="icon" href="/favicon.ico" />
 
-  <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=ABeeZee&family=Crete+Round&display=swap" rel="stylesheet">
 
   <title>Podcast Client</title>
 </head>
